--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
   "author": "Marc Robert Wong <marcrobertwong@gmail.com>",
   "license": "MPL-2.0",
   "dependencies": {
-    "clipboardy": "^1.1.4",
-    "eslint-plugin-mozilla": "^0.3.4",
-    "fs-extra": "^3.0.1",
-    "fx-runner": "^1.0.6",
-    "geckodriver": "^1.7.1",
-    "mocha": "^3.4.2",
-    "path": "^0.12.7",
-    "selenium-webdriver": "^3.4.0"
+    "clipboardy": "1.1.4",
+    "eslint-plugin-mozilla": "0.3.4",
+    "fs-extra": "3.0.1",
+    "fx-runner": "1.0.6",
+    "geckodriver": "1.7.1",
+    "mocha": "3.4.2",
+    "path": "0.12.7",
+    "selenium-webdriver": "3.4.0",
+    "yarn": "0.27.5"
   },
   "devDependencies": {
-    "eslint": "^4.4.1",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.5.0"
+    "eslint": "4.4.1",
+    "eslint-config-airbnb-base": "11.2.0",
+    "eslint-plugin-import": "2.5.0"
   },
   "scripts": {
     "postinstall": "./bin/patch_webdriver.sh",
